# substrate-node-template

node/: Cargo.toml
node/src/: chain_spec.rs  rpc.rs  service.rs
pallets/template/src/: mock.rs
runtime/: Cargo.toml
runtime/src/: lib.rs
runtime/src/shift-session-manager/: Cargo.toml
runtime/src/shift-session-manager/src/: lib.rs
runtime/src/weights/: mod.rs  pallet_bags_list.rs  pallet_session.rs  pallet_staking.rs  pallet_utility.rs
